# CmakeDemo

1.2 hello-handers/: CMakeLists.txt
1.2 hello-handers/.cache/clangd/index/: Hello.cpp.004047ADBD4397BB.idx  Hello.h.9176D9F43CB70A45.idx  main.cpp.21FB037CAB17B6EB.idx
1.3 static-library/include/static/: Hello.h
1.3 static-library/src/: Hello.cpp
1.4 shared-library/: CMakeLists.txt
1.4 shared-library/src/: Hello.cpp
1.5 build-type/: CMakeLists.txt
1.6 compile-flags/: CMakeLists.txt
1.7 include-third-party-library/: CMakeLists.txt  main.cpp
1.7 include-third-party-library/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  third_party_include
CmakeDemo/: CMakeLists.txt
CmakeDemo/.cache/clangd/index/: main.cpp.6B893FA80EA347B4.idx  testFunc.cpp.33123E4D327DC391.idx  testFunc.h.BE48FBD684D285B9.idx  testFunc1.cpp.F92BDE0427E9E68D.idx  testFunc1.h.B55A523442B4F7F2.idx
CmakeDemo/src/: CMakeLists.txt  main.cpp  testFunc.cpp  testFunc1.cpp
calibration_demo/: CMakeLists.txt
calibration_demo/.cache/clangd/index/: calibration.cpp.1CDC3D4E6FBFC3BA.idx  camera_calibration.cpp.16331870512143ED.idx  correction.cpp.7355BB081B8518EC.idx  imagelist_creator.cpp.87BD51711C5229B7.idx  main.cpp.9058731229FD6514.idx  stereo_calib.cpp.849C8C9103C317CC.idx  stereo_match.cpp.66602F5106049490.idx
calibration_demo/camera_calibration/: correction.cpp  in_VID5.xml
calibration_demo/src/: stereo_calib.cpp
hello-handers/: CMakeLists.txt
hello-handers/include/: Hello.h
hello-handers/src/: Hello.cpp  main.cpp
hello_library/: CMakeLists.txt
multi-threading/: test1.cpp  test_mt.cpp  test_mt2.cpp  test_mt3.cpp  test_mt_future.cpp  test_mt_join.cpp  test_mt_join2.cpp  test_mt_lock_guard.cpp  test_mt_lock_guard2.cpp  test_mt_mutex.cpp  test_mt_parameters.cpp  test_mt_unique_lock.cpp
nanodet_ncnn/: CMakeLists.txt
nanodet_ncnn/.cache/clangd/index/: main.cpp.B39788E5F782786F.idx  nanodet.cpp.FBB0D938DA1E671A.idx  nanodet.h.A65C2FDD2E24AAE9.idx
nanodet_ncnn/include/: nanodet.h
nanodet_ncnn/src/: nanodet.cpp
opencvTest/: CMakeLists.txt
opencvTest/.cache/clangd/index/: opencv_test.cpp.10F51667BE7E232F.idx  test_Homography.cpp.1380CF5958AAF2BC.idx
opencvTest/src/: opencv_test.cpp  test_Homography.cpp
shared_library/: CMakeLists.txt
shared_library/include/shared/: Hello.h
